--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,7 +19,7 @@ html {
 }
 
 body {
-	font-family: 'Rubik', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family: 'Poppings', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	color: #6c757d;
 	line-height: 1.6666;
 	font-weight: 400;
@@ -2779,6 +2779,20 @@ span.os-version {
 .white-color .plat-color {
 	color: #e5e4e2;
 }
+
+.volt-color,
+.volt-color h2,
+.volt-color h3,
+.volt-color h4,
+.volt-color h5,
+.volt-color h6,
+.volt-color p,
+.volt-color a,
+.volt-color li,
+.volt-color i,
+.white-color .volt-color {
+	color: #ceff00;
+}
 /*------------------------------------------*/
 /*  TEXT BLOCK
 /*------------------------------------------*/
@@ -3259,7 +3273,7 @@ p.terms-txt a,
 }
 
 .tra-menu .wsmainfull {
-	background-color: #0000008c !important;
+	background-color: black !important;
 	padding: 20px 0;
 	-webkit-box-shadow: none;
 	-moz-box-shadow: none;
@@ -3995,6 +4009,10 @@ p.terms-txt a,
 .hero-2-img {
 	text-align: center;
 	margin-bottom: -50px;
+}
+
+.hero-2-img img {
+	height: 700px;
 }
 
 /*------------------------------------------*/
