--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,12 +5,15 @@
 @import '../public/css/dropdown-effects/fade-up.css';
 @import '../public/css/dropdown-effects/fade-down.css';
 
-@import '../public/css/bootstrap.min.css';
+/* @import '../public/css/bootstrap.min.css'; */
+@import 'bootstrap/dist/css/bootstrap.css';
 @import '../public/css/flaticon.css';
 @import '../public/css/menu.css';
 @import '../public/css/magnific-popup.css';
 @import '../public/css/animate.css';
 @import '../public/css/style.css';
-@import '../public/css/responsive.css';
 
+@import '../src/components/howitworks/howitworks.css';
+@import './faq.css';
 @import './custom.css';
+@import '../public/css/responsive.css';
