--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4011,9 +4011,10 @@ p.terms-txt a,
 	position: relative;
 	z-index: 3;
 	/* background-image: url(../images/hero-2.jpg); */
-	padding-top: 150px;
+	/* padding-top: 150px; */
 	background-color: #ceff00;
 	margin-bottom: 50px;
+	height: 100vh;
 }
 
 .hero-2-txt {
