--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -18,7 +18,6 @@
 		margin-top: 140px;
 		height: calc(100vh - 140px);
 		background: #ceff00;
-		border: solid red;
 	}
 
 	.container-hero {
@@ -34,12 +33,10 @@
 
 	.hero-left {
 		height: calc(100vh - 140px);
-		border: solid green;
 	}
 
 	.hero-right {
 		height: calc(100vh - 140px);
-		background: orange;
 	}
 	.hero-phone-wrapper {
 		display: flex;
@@ -74,7 +71,7 @@
 		padding-bottom: 30px;
 		display: flex;
 		align-self: flex-start;
-		color: red;
+		color: black;
 	}
 
 	/*------------------------------------------*/
@@ -6376,10 +6373,13 @@
 		height: 100%;
 		display: flex;
 		flex-direction: column-reverse;
+		justify-content: center;
+		align-items: center;
 	}
 
 	.hero-left {
 		height: 40%;
+		width: 100%;
 		/* background: green; */
 	}
 
@@ -6412,10 +6412,21 @@
 	.hero-mobile-cta a {
 		color: white;
 	}
+	.hero-mobile-cta p {
+		color: black;
+		text-align: center;
+		padding-top: 10px;
+	}
+	.hero-mobile-cta h1 {
+		font-size: 30px;
+		font-weight: 700;
+		line-height: 10px;
+	}
 
 	/* Hero Brands */
 	.hero-brands p {
 		margin: 25px;
+		font-size: 16px;
 		text-align: center;
 	}
 
