--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -12127,6 +12127,92 @@
 		font-size: 1rem;
 		text-align: center;
 	}
+
+	.hero-home-container {
+		margin-top: 78px;
+		height: 92vh;
+		background: #ceff00;
+	}
+
+	.container-hero {
+		height: 90vh;
+		padding-top: 20px;
+	}
+
+	.container-hero-wrapper {
+		height: 100%;
+		display: flex;
+		flex-direction: column-reverse;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.hero-left {
+		height: 40%;
+		width: 100%;
+		/* background: green; */
+	}
+
+	.hero-right {
+		height: 60%;
+		/* background: orange; */
+	}
+	.hero-phone-wrapper {
+		display: flex;
+		justify-content: center;
+		align-items: flex-start;
+		height: 100%;
+	}
+	.hero-phone-mockup {
+		height: 450px;
+		width: auto;
+		padding-top: 20px;
+	}
+
+	.hero-mobile-cta {
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: center;
+		height: 100%;
+		color: white;
+		padding-top: 40px;
+	}
+
+	.hero-mobile-cta a {
+		color: white;
+	}
+	.hero-mobile-cta p {
+		color: black;
+		text-align: center;
+		padding-top: 10px;
+	}
+	.hero-mobile-cta h1 {
+		font-size: 23px;
+		font-weight: 700;
+		line-height: 10px;
+	}
+
+	/* Hero Brands */
+	.hero-brands p {
+		margin: 25px;
+		font-size: 16px;
+		text-align: center;
+	}
+
+	/* Hero-1 */
+	.hero-1-txt {
+		padding: 0 4%;
+		margin-bottom: 30px;
+	}
+	.hero-1-txt p.p-xl {
+		font-size: 1.125rem;
+		padding-right: 0;
+		margin-bottom: 30px;
+	}
+	.hero-1-img {
+		padding: 0 5%;
+	}
 }
 
 /* ------------------------------------------------------------------------ */
@@ -14520,5 +14606,91 @@
 		color: white;
 		font-size: 1rem;
 		text-align: center;
+	}
+
+	.hero-home-container {
+		margin-top: 78px;
+		height: 92vh;
+		background: #ceff00;
+	}
+
+	.container-hero {
+		height: 90vh;
+		padding-top: 20px;
+	}
+
+	.container-hero-wrapper {
+		height: 100%;
+		display: flex;
+		flex-direction: column-reverse;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.hero-left {
+		height: 40%;
+		width: 100%;
+		/* background: green; */
+	}
+
+	.hero-right {
+		height: 60%;
+		/* background: orange; */
+	}
+	.hero-phone-wrapper {
+		display: flex;
+		justify-content: center;
+		align-items: flex-start;
+		height: 100%;
+	}
+	.hero-phone-mockup {
+		height: 450px;
+		width: auto;
+		padding-top: 20px;
+	}
+
+	.hero-mobile-cta {
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: center;
+		height: 100%;
+		color: white;
+		padding-top: 40px;
+	}
+
+	.hero-mobile-cta a {
+		color: white;
+	}
+	.hero-mobile-cta p {
+		color: black;
+		text-align: center;
+		padding-top: 10px;
+	}
+	.hero-mobile-cta h1 {
+		font-size: 15px;
+		font-weight: 700;
+		line-height: 10px;
+	}
+
+	/* Hero Brands */
+	.hero-brands p {
+		margin: 25px;
+		font-size: 16px;
+		text-align: center;
+	}
+
+	/* Hero-1 */
+	.hero-1-txt {
+		padding: 0 4%;
+		margin-bottom: 30px;
+	}
+	.hero-1-txt p.p-xl {
+		font-size: 1.125rem;
+		padding-right: 0;
+		margin-bottom: 30px;
+	}
+	.hero-1-img {
+		padding: 0 5%;
 	}
 }
