--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8287,6 +8287,7 @@ nav a#pull {
 .hero-left {
 	height: 100%;
 	width: 60%;
+	z-index: 999;
 }
 
 .hero-right {
@@ -8298,6 +8299,7 @@ nav a#pull {
 	justify-content: center;
 	align-items: center;
 	height: 100%;
+	z-index: 999;
 }
 .hero-phone-mockup {
 	height: 600px;
@@ -8368,4 +8370,25 @@ nav a#pull {
 }
 .pb-150 {
 	padding-bottom: 130px;
+}
+
+/* ==========================================================================
+  29. HERO WATERMARK
+  ========================================================================== */
+
+.hero-watermark {
+	position: absolute;
+	bottom: -55px;
+	z-index: -1;
+	width: 100%;
+	text-align: center;
+	/* font-size: 60rem; */
+}
+
+.hero-watermark h1 {
+	color: #0000000f;
+	font-family: 'Poppins', Sans-serif;
+	font-size: 120px;
+	font-weight: 600;
+	line-height: 170px;
 }
